Added Entity system. Added Player entity. Added collision detection for player movement. Player is spawned on a random grass tile.

--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,6 @@
-- Entity system
-- Controllable player
-    - Collision detection with water/other solid tiles
+- Entity system/
+- Controllable player/
+    - Collision detection with water/other solid tiles/
 
 - Forest generation
     - Bushes as well?
