Added an Inventory. Added Items and ItemStacks. Added a stick item. Render the player's inventory to the screen.

--- a/todo.txt
+++ b/todo.txt
@@ -11,6 +11,13 @@
 - Player health
     - Hunger?
 
+- Player inventory/
+
+- HUD/UI
+    - Show health
+    - Hunger
+    - Inventory hotbar?
+
 - Item drops from trees/bushes
 
 - Mineable stuff on the surface
