Started implementing crafting gui. Added 4 tools.

--- a/todo.txt
+++ b/todo.txt
@@ -26,8 +26,8 @@
 
 - Mobs
     - Some friendly
-    - Some aggressive
-- Combat with mobs
+    - Some aggressive/
+- Combat with mobs/
     - Different weapons
 
 
