Implemented the ability to select an Item Slot as your active item. Item Slots can be dropped by right clicking. Don't render tiles that are off screen.

--- a/todo.txt
+++ b/todo.txt
@@ -23,10 +23,10 @@
 - Mineable stuff on the surface/
 
 - Implement tools
-    - Equip items by clicking on itemslot?
+    - Equip items by clicking on itemslot?/
         - Mouse wheel scrolls through inventory
 
-- Can drop items by right clicking on the itemslot
+- Can drop items by right clicking on the itemslot/
 
 
 - Improved art for everything
