Generate berry bushes over the level. Bushes drop ItemBerry when cut down. Berries can be eaten by right clicking with them selected. Berries restore hunger.

--- a/todo.txt
+++ b/todo.txt
@@ -15,8 +15,8 @@
 
 - HUD/UI
     - Show health/
-    - Hunger
-    - Inventory hotbar?
+    - Hunger/
+    - Inventory hotbar?/
 
 - Item drops from trees/bushes/
 
