--- a/todo.txt
+++ b/todo.txt
@@ -63,6 +63,8 @@
 - Main menu
 - Instructions
 
+- Shelters can be used to cook food
+
 
 Crafting system/
 - GUI based, split into categories/
@@ -73,8 +75,6 @@ Crafting system/
     - Shelter
         - Basic tent
             - Dies after a few days
-    - Food
-    - Misc??
 
 
 KNOWN BUGS:
