--- a/todo.txt
+++ b/todo.txt
@@ -53,7 +53,7 @@
         - Can be killed for food/
     - Some aggressive/
 - Combat with mobs/
-    - Different weapons
+    - Different weapons/
 
 - Improve spawning system/
 
@@ -66,7 +66,7 @@
 
 - Cooldown for swords?
 
-- Shelters can be used to cook food
+- Shelters can be used to cook food/
 
 
 - Balance everything
