Added an advanced tent. Changed item recipes

--- a/todo.txt
+++ b/todo.txt
@@ -82,7 +82,8 @@ Crafting system/
         - Swords/
         - Bow/Arrow
     - Shelter
-        - Basic tent
+        - Basic tent/
+        - Advanced tent
 
 
 KNOWN BUGS:
